# ris-assignment

./: .gitignore
bsp-dungeon-generator/: CMakeLists.txt  main.cpp
cubeshot/: CMakeLists.txt  README.md
cubeshot/lib/glad/: glad.c  glad.h
cubeshot/src/client/: client.cpp  client.h  networkmanager.cpp  networkmanager.h  player.cpp  player.h  world.cpp  world.h
cubeshot/src/client/networking/: clientnetmanager.cpp  clientnetmanager.h
cubeshot/src/client/networking/handlers/: initmessagehandler.cpp  initmessagehandler.h  loginmessagehandler.cpp  loginmessagehandler.h  updatemessagehandler.cpp  updatemessagehandler.h
cubeshot/src/client/shaders/: fragment.glsl  game.frag  game.vert  ui.frag  ui.vert  vertex.glsl
cubeshot/src/client/utils/: blockingqueue.h  blueprint.h  camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h
cubeshot/src/server/: server.cpp  server.h
cubeshot/src/server/networking/: loginmessagehandler.cpp  loginmessagehandler.h  servernetmanager.cpp  servernetmanager.h
cubeshot/src/server/networking/handlers/: inputmessagehandler.cpp  inputmessagehandler.h  loginmessagehandler.cpp  loginmessagehandler.h  logoutmessagehander.cpp  logoutmessagehandler.h  movemessagehandler.cpp  movemessagehandler.h
cubeshot/src/server/physics/: collision.h  raycast.h
cubeshot/src/shared/: floor.h  intersectable.h  intersectible.h  laser.h  obstacle.h  player.cpp  player.h  potion.h  tile.h  vector3.h  world.cpp  world.h
cubeshot/src/shared/networking/: loginmessage.cpp  loginmessage.h  logoutmessage.h  netmanager.cpp  netmanager.h  netmessage.cpp  netmessage.h  netmessagehandler.h
cubeshot/src/shared/networking/messages/: initmessage.h  inputmessage.h  loginmessage.h  logoutmessage.h  movemessage.h  netmessage.h  updatemessage.h
cubeshot/src/shared/physics/: collision.h  helpers.h  raycast.h
cubeshot/src/shared/utils/: blockingqueue.h  constants.h  direction.h  serialization.h
cubeshot/src/test/: test.cpp
network_getting_started/: CMakeLists.txt
network_getting_started/src/: client.cpp  clientnetmanager.cpp  clientnetmanager.h  netmanager.cpp  netmanager.h  netmessage.cpp  netmessage.h  netmsg.h  netmsghandler.h  server.cpp  servernetmanager.cpp  servernetmanager.h
ogl_getting_started/: CMakeLists.txt  Camera.cpp  Camera.h  Shader.cpp  Shader.h  main.cpp  multiple_triangles-diferent_shader.cpp  multiple_triangles-separate_vbo_vao.cpp  multiple_triangles.cpp
ogl_getting_started/shaders/: fragment.glsl  vertex.glsl  yellow_fragment.glsl
serialization/: CMakeLists.txt
serialization/src/: main.cpp
